--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
+#spring.main.allow-bean-definition-overriding=true
+#spring.jackson.date-format=MM-dd-yyyy HH:mm:ss
+spring.jackson.date-format=MM-dd-yyyy
+spring.jackson.time-zone=Africa/Nairobi
