added user registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ server.error.include-message=always
 #spring.jackson.date-format=MM-dd-yyyy HH:mm:ss
 spring.jackson.date-format=MM-dd-yyyy
 spring.jackson.time-zone=Africa/Nairobi
+spring.mail.host=127.0.0.1
+spring.mail.port=8977
+spring.mail.userName=test
+spring.mail.password=test
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+
