--- a/VueJSApp/client/package.json
+++ b/VueJSApp/client/package.json
@@ -1,41 +1,49 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "supermarketclient",
+  "version": "1.2.3",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
     "dev": "npm run serve"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "core-js": "^3.6.5",
+    "chartist": "0.11.0",
+    "docx": "^5.3.0",
+    "file-saver": "^2.0.2",
+    "flat": "^5.0.2",
+    "jspdf": "^2.1.1",
+    "jspdf-autotable": "^3.5.13",
+    "lodash.get": "^4.4.2",
+    "node-sass": "^4.13.1",
+    "officegen": "^0.6.4",
+    "register-service-worker": "^1.7.2",
+    "sass-loader": "^10.0.4",
     "vue": "^2.6.11",
-    "vuejs-logger": "^1.5.5"
+    "vue-axios": "^3.2.5",
+    "vue-chartist": "^2.2.1",
+    "vue-json-excel": "^0.3.0",
+    "vue-meta": "^1.6.0",
+    "vuetify": "^2.4.0",
+    "xlsx": "^0.16.8"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+    "@mdi/font": "^2.8.94",
+    "@vue/cli-service": "^4.5.8",
+    "material-design-icons-iconfont": "^3.0.3",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "vue-analytics": "^5.22.1",
+    "vue-cli-plugin-vuetify": "~2.4.2",
+    "vue-i18n": "^7.8.1",
+    "vue-router": "^3.4.8",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0",
+    "vuex": "^3.1.3",
+    "vuex-router-sync": "^5.0.0"
   },
   "browserslist": [
     "> 1%",
