--- a/VueJSApp/frontend/package.json
+++ b/VueJSApp/frontend/package.json
@@ -15,6 +15,7 @@
     "flat": "^5.0.2",
     "jspdf": "^2.1.1",
     "jspdf-autotable": "^3.5.13",
+    "jwt-decode": "^3.1.2",
     "lodash.get": "^4.4.2",
     "node-sass": "^4.13.1",
     "officegen": "^0.6.4",
