--- a/springboot.vuejs/pom.xml
+++ b/springboot.vuejs/pom.xml
@@ -44,7 +44,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -64,6 +67,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+ 		    <groupId>org.springframework.security</groupId>
+ 		    <artifactId>spring-security-test</artifactId>
+ 		    <scope>test</scope>
+ 		</dependency>
 	</dependencies>
 
 	<build>
