--- a/VueJSApp/frontend/package.json
+++ b/VueJSApp/frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "dev": "npm run serve"
+    "dev": "npm run serve",
+    "test:unit": "vue-cli-service test:unit --require tests/unit/setup.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -13,6 +14,7 @@
     "docx": "^5.3.0",
     "file-saver": "^2.0.2",
     "flat": "^5.0.2",
+    "jsdom": "^17.0.0",
     "jspdf": "^2.1.1",
     "jspdf-autotable": "^3.5.13",
     "jwt-decode": "^3.1.2",
@@ -31,7 +33,10 @@
   },
   "devDependencies": {
     "@mdi/font": "^2.8.94",
+    "@vue/cli-plugin-unit-mocha": "~4.5.0",
     "@vue/cli-service": "^4.5.8",
+    "@vue/test-utils": "^1.0.3",
+    "chai": "^4.1.2",
     "material-design-icons-iconfont": "^3.0.3",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
